fixed collaps menu

--- a/src/app/chats/chat-detail/chat-detail.component.css
+++ b/src/app/chats/chat-detail/chat-detail.component.css
@@ -1,11 +1,5 @@
 .chat-detail {
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
-    -webkit-box-pack: end;
-    justify-content: flex-end;
-    width: 100%;
+    flex-grow: 1;
 }
 
 ul {
