--- a/src/app/chats/chat-holder/chat-holder.component.css
+++ b/src/app/chats/chat-holder/chat-holder.component.css
@@ -1,8 +1,3 @@
-.chat-holder {
-    display: flex;
-    background-color: white;
-}
-
 .chat-holder h1 {
     margin: auto;
     line-height: 530px;
