--- a/src/app/chats/chat.component.css
+++ b/src/app/chats/chat.component.css
@@ -7,11 +7,3 @@
 h1 {
     margin: 0;
 }
-
-ct-chat-list {
-    width: 30%;
-}
-
-ct-chat-detail {
-    flex-grow: 2;
-}
