--- a/src/styles.css
+++ b/src/styles.css
@@ -27,5 +27,4 @@ body {
 ct-chat-detail,
 ct-chat-holder {
     display: flex;
-    width: 70%;
-}
+    width: 70%; flex-grow: 1;}
